src/test/ui/closures/2229_closure_analysis/feature-gate-capture_disjoint_fields.rs
#![feature(capture_disjoint_fields)]
//~^ WARNING the feature `capture_disjoint_fields` is incomplete
#![feature(rustc_attrs)]

fn main() {
    let s = format!("s");

    let c = #[rustc_capture_analysis] || {
    //~^ ERROR: attributes on expressions are experimental
        println!("This uses new capture analyysis to capture s={}", s);
    };
}
